# automia

./: README.md  automia_lab.html  index.html  pyproject.toml
examples/bbllm/arxiv_pythia/: config.yaml  env.sh  template.py
examples/bbllm/github_pythia/: template.py
examples/bbllm/pubmed_pythia/: template.py
examples/vlm/dalle_img/: config.yaml  template.py
examples/vlm/dalle_text/: config.yaml  template.py
examples/vlm/flickr_img/: config.yaml  template.py
examples/vlm/flickr_text/: config.yaml  template.py
src/automia/: __init__.py  main.py
src/automia/agents/: __init__.py  coder.py  executor.py  exploiter.py  explorer.py  mutator.py  reader.py
src/automia/common/: __init__.py  config.py  llm.py  logger.py  schemas.py
src/automia/tools/: __init__.py  bm25.py  database.py  embedding.py  experiment.py
utils/: eval.py  vis.py
